[gd_scene load_steps=12 format=3 uid="uid://cshtb6cuk5p21"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_iulgc"]
[ext_resource type="FontFile" uid="uid://cetsjqaghxe7e" path="res://ZTGatha-SemiBold.ttf" id="1_kwthu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kpstk"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h82ks"]
bg_color = Color(0.0196078, 0.247059, 0.368627, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tinkm"]
bg_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o4081"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4dffo"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_br4o6"]
bg_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12cvj"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24nl5"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_55m5r"]
bg_color = Color(1, 0.843137, 0, 1)

[node name="main" type="Node"]
script = ExtResource("1_iulgc")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0666667, 0.317647, 0.45098, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -152.0
offset_top = 112.0
offset_right = 147.0
offset_bottom = 160.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_kwthu")
theme_override_font_sizes/font_size = 40
text = "Dexterity Test"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="Node" parent="."]

[node name="ExercisesButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -44.0
offset_right = 152.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kwthu")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_kpstk")
theme_override_styles/pressed = SubResource("StyleBoxFlat_h82ks")
theme_override_styles/normal = SubResource("StyleBoxFlat_tinkm")
text = "Exercises"

[node name="DashboardButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = 124.0
offset_right = 152.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kwthu")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_o4081")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4dffo")
theme_override_styles/normal = SubResource("StyleBoxFlat_br4o6")
text = "Dashboard"

[node name="QuitButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -512.0
offset_top = 196.0
offset_right = -419.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kwthu")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_12cvj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_24nl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_55m5r")
text = "Quit
"

[node name="SaveButton" type="Button" parent="Buttons"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 416.0
offset_top = 196.0
offset_right = 509.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kwthu")
theme_override_font_sizes/font_size = 24
theme_override_styles/hover = SubResource("StyleBoxFlat_12cvj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_24nl5")
theme_override_styles/normal = SubResource("StyleBoxFlat_55m5r")
text = "Save
"

[connection signal="pressed" from="Buttons/ExercisesButton" to="." method="_on_games_button_pressed"]
[connection signal="pressed" from="Buttons/DashboardButton" to="." method="_on_dashboard_button_pressed"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Buttons/SaveButton" to="." method="_on_save_button_pressed"]
